; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_maxinefb.c_maxinefb_ims332_write_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_maxinefb.c_maxinefb_ims332_write_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXINEFB_IMS332_ADDRESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @maxinefb_ims332_write_register(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* @MAXINEFB_IMS332_ADDRESS, align 8
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 655360
  %11 = load i32, i32* %3, align 4
  %12 = shl i32 %11, 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %10, i64 %13
  store i8* %14, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = lshr i32 %15, 8
  %17 = and i32 %16, 65280
  %18 = load i8*, i8** %5, align 8
  %19 = bitcast i8* %18 to i32*
  store volatile i32 %17, i32* %19, align 4
  %20 = load i32, i32* %4, align 4
  %21 = trunc i32 %20 to i16
  %22 = load i8*, i8** %6, align 8
  %23 = bitcast i8* %22 to i16*
  store volatile i16 %21, i16* %23, align 2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
